--- a/320projectGUI/mainwindow.ui
+++ b/320projectGUI/mainwindow.ui
@@ -28,6 +28,7 @@
       <pointsize>36</pointsize>
       <weight>75</weight>
       <bold>true</bold>
+      <underline>true</underline>
      </font>
     </property>
     <property name="text">
@@ -54,7 +55,7 @@
      <string>Stay on track with your degree!</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="learnMore">
     <property name="geometry">
      <rect>
       <x>150</x>
@@ -74,7 +75,7 @@
      <string>Learn More</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="startNow">
     <property name="geometry">
      <rect>
       <x>460</x>
