--- a/ProjectGUI2/mainwindow.ui
+++ b/ProjectGUI2/mainwindow.ui
@@ -47,7 +47,7 @@
      <string>What Program are you in?</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QComboBox" name="faculty">
     <property name="geometry">
      <rect>
       <x>150</x>
@@ -65,9 +65,9 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>160</x>
       <y>220</y>
-      <width>161</width>
+      <width>171</width>
       <height>21</height>
      </rect>
     </property>
@@ -79,10 +79,10 @@
      </font>
     </property>
     <property name="text">
-     <string>What degree?</string>
+     <string>What discipline?</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_2">
+   <widget class="QComboBox" name="discipline">
     <property name="geometry">
      <rect>
       <x>150</x>
@@ -142,7 +142,7 @@
      </property>
     </item>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="nextBtn">
     <property name="geometry">
      <rect>
       <x>150</x>
@@ -161,7 +161,7 @@
      <string>Next</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="skipBtn">
     <property name="geometry">
      <rect>
       <x>150</x>
