Update GUI Code

--- a/320projectGUI/dashintro.ui
+++ b/320projectGUI/dashintro.ui
@@ -16,9 +16,9 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>50</x>
      <y>10</y>
-     <width>321</width>
+     <width>391</width>
      <height>121</height>
     </rect>
    </property>
@@ -46,9 +46,9 @@
   <widget class="QPushButton" name="dashBtn">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>170</x>
      <y>180</y>
-     <width>111</width>
+     <width>131</width>
      <height>51</height>
     </rect>
    </property>
@@ -60,6 +60,29 @@
    </property>
    <property name="text">
     <string>Go to DashBoard</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="disOut">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>150</y>
+     <width>113</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>120</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Discipline:</string>
    </property>
   </widget>
  </widget>
