--- a/320projectGUI/addcoursewindow.ui
+++ b/320projectGUI/addcoursewindow.ui
@@ -49,7 +49,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>150</x>
@@ -67,11 +67,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="yeaIn"/>
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>250</x>
@@ -100,7 +100,7 @@
      <x>0</x>
      <y>0</y>
      <width>527</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
